--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
+		<meta name="referrer" content="no-referrer-when-downgrade">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
