--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<!-- <meta httpEquiv="X-Frame-Options" content="SAMEORIGIN" /> -->
+		<meta http-equiv="X-Frame-Options" content="sameorigin"/>
 		<meta name="referrer" content="no-referrer-when-downgrade">
     <script type="application/ld+json">
     {
